Pixel Font Rendering
Hacked together some pixel font rendering.
Need to create a UI rendering pass, to handle ui elements and fonts etc.

Might be an idea to convert the font loading to a binary style file instead of using atoi.

--- a/Respite/Respite.vcxproj
+++ b/Respite/Respite.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="loadMesh.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="PixelFont.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="terrain.h" />
