--- a/Respite/Respite.vcxproj
+++ b/Respite/Respite.vcxproj
@@ -171,6 +171,9 @@
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="terrain.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="block_ids.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
